<resources>
    <string name="app_name">Watched</string>
    <!-- Strings related to login -->
    <string name="configuration">"Configuration"</string>
    <string name="DisplayLogin">login</string>
    <string name="Timer">Timer</string>
    <string name="scoretimer">15648</string>
    <string name="FavoriteShows">Séries favorites</string>
    <string name="friends">Amis</string>
    <string name="ButtonConfig">Configuration</string>
    <string name="watchAlone">séries que je regarde seul</string>
    <string name="myListTitle">Mes listes</string>
    <string name="watchWife">séries que je regarde avec ma femme</string>
    <string name="watchFamily">Séries que je ragrde en famille</string>
    <string name="TvShows">Tv-Shows</string>
    <string name="Friends">Amis</string>
    <string name="oppi">getUsername</string>
    <string name="Discover">Discvover</string>
    <string name="Messages">Messages</string>
    <string name="MyList">Mes listes</string>
    <string name="Configuration">Configuration</string>
    <string name="Send">Envoyer</string>

    <string-array name="friends">
        <item> Lancelot </item>
        <item> Arthur </item>
        <item> Gauvain </item>
        <item> Yvain </item>
        <item> Galahad </item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_client">Profil</string>
    <string name="title_activity_accounts">TvShows</string>
    <string name="disclaimer" translatable="false">Copyright &#169; 2017\nHES-SO Valais//Wallis Sierre</string>
    <string name="impressum" translatable="false">644-1 Mobile &amp; Cloud Computing</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">Invalid login credentials</string>
    <string name="error_used_email">Email already in use</string>
    <string name="error_invalid_password">This password is too short (&lt;5 characters)</string>
    <string name="error_edit_invalid_password">You need to specify a password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="client_name">Last Name</string>
    <string name="client_firstName">First Name</string>
    <string name="action_create">Create</string>
    <string name="action_update">Save Changes</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="client_repeat_password">Repeat Password</string>
    <string name="title_activity_create_account">Create Show</string>
    <string name="account_balance">Account Balance</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_accept">Execute</string>
    <string name="transaction_from">From</string>
    <string name="transaction_to">To</string>
    <string name="transaction_acc">Account</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="transaction_amount">Amount</string>
    <string name="error_transaction">The transfer amount exceeds the account balance</string>
    <string name="error_transaction_negativ">The transaction amount must be positive</string>
    <string name="balance" translatable="false">%1$s$</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_withdraw">Withdrawal cannot exceed account balance</string>
    <string name="client_created">Client created</string>
    <string name="client_edited">Client edited</string>
    <string name="prompt_account_name">Show Name</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="account_created">Show created</string>
    <string name="account_edited">Show edited</string>
    <string name="account_deleted">Show deleted</string>
    <string name="title_activity_delete_account">Delete Show</string>
    <string name="account_delete_msg">Do you want to delete the show %1$s?</string>
    <string name="action_logout">Logout</string>
    <string name="action_reset">Reset</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="delete_msg">Do you really want to delete your client account?</string>
    <string name="reset_msg">Do you really want to reset the database?</string>
    <string name="transaction_executed">Transaction executed</string>
    <string name="transaction_no_selection">Please select a recipient</string>
    <string name="transaction_no_amount">Please specify an amount</string>
    <string name="action_register">Register</string>
    <string name="action_demo_data">Reset Demo Data</string>
    <string name="demo_data_initiated">Demo data initiated</string>
    <string name="title_activity_Episodes">Série</string>
    <string name="title_activity_tvShow">TvShows</string>
    <string name="title_activity_episode_detail">detail episode</string>
    <string name="Episode">nom de l\'épisode</string>
    <string name="title_activity_Episode">Episode</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_list">Mes listes</string>
    <string name="prompt_episode_name">Episode name</string>
    <string name="prompt_episode_number">S1E3</string>
    <string name="title_activity_create_episode">create episode</string>
    <string name="episode_created">episode created</string>
    <string name="title_activity_edit_episode">edition episode</string>
    <string name="show_edited">show edited</string>
    <string name="prompt_first_show">first show of the list</string>
    <string name="prompt_list_name">list name</string>
    <string name="about">Created by Hadrien Oppikofer for HES-SO</string>
    <string name="title_activi_list">mes listes</string>


</resources>
